--- a/example/index.html
+++ b/example/index.html
@@ -1,34 +1,32 @@
 <!doctype html>
 <html>
   <head>
+    <script src="../build/gsynth.js"></script>
   </head>
   <body>
-    <script src="/guitar-synth/lib/swfobject.js"></script>
-    <script src="/guitar-synth/build/gsynth.js"></script>
+
     <script>
       window.onload = function(){
-        guitar = new gsynth.GuitarSynth({
-          flashPath: '/guitar-synth/build'
-        });
+        guitar = new gsynth.GuitarSynth();
 
         // a slowly picked E Major Chord:
         setTimeout(function(){
           guitar.playNotes([{ str: 5, fret: 0 }]);
           setTimeout(function(){
-            guitar.playNotes([{ str: 4, fret: 2 }]);
+            guitar.playNotes([{ str: 4, fret: 0 }]);
             setTimeout(function(){
-              guitar.playNotes([{ str: 3, fret: 2 }]);
+              guitar.playNotes([{ str: 3, fret: 0 }]);
               setTimeout(function(){
-                guitar.playNotes([{ str: 2, fret: 1 }]);
+                guitar.playNotes([{ str: 2, fret: 0 }]);
                 setTimeout(function(){
                   guitar.playNotes([{ str: 1, fret: 0 }]);
                   setTimeout(function(){
                     guitar.playNotes([{ str: 0, fret: 0 }]);
-                  },50);
-                },50);
-              },50);
-            },50);
-          },50);
+                  },250);
+                },250);
+              },250);
+            },250);
+          },250);
         },1000);
       };
     </script>
